# cookiecutter-pyagent

./: .gitignore  .repomixignore  Makefile  cookiecutter.json  diff-projects.sh  instructions.txt  repomix-output.xml  sync_cookiecutter_template.py  test_config.json
my_awesome_package/: README.md  pyproject.toml
my_awesome_package/.github/: ISSUE_TEMPLATE.md
my_awesome_package/src/my_awesome_package/: __init__.py  cli.py
my_awesome_package/tests/: __init__.py  test_my_awesome_package.py
{{cookiecutter.project_name}}/: .gitignore  README.md  config.yaml  config.yaml.sample  mypy.ini  pyproject.toml  pytest.ini  servers_config.json
{{cookiecutter.project_name}}/.github/: ISSUE_TEMPLATE.md
{{cookiecutter.project_name}}/docs/: DEVELOPMENT.md  evaitools_docs.md  mcp-server.md
{{cookiecutter.project_name}}/scripts/: run_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  config.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/cli/: __init__.py  cli.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/flows/: __init__.py  {{cookiecutter.project_slug}}_flow.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/mcp/: __init__.py  server.py  {{cookiecutter.project_slug}}_server.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/util/: fastmail_client.py  llm.py  todoist.py
{{cookiecutter.project_name}}/tests/: conftest.py  test_{{cookiecutter.project_slug}}.py  test_{{cookiecutter.project_slug}}_flows.py  test_{{cookiecutter.project_slug}}_integration.py  test_{{cookiecutter.project_slug}}_mcp.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
