[project]
name = "my_awesome_package"
version = "0.1.0"
description = "A description of my awesome package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic",
    "anthropic",
    "python-dotenv",
    "httpx",
    "rich",
    "prefect",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "ruff",
    "mypy"
]

[project.urls]

bugs = "https://github.com/lherron/my_awesome_package/issues"
changelog = "https://github.com/lherron/my_awesome_package/blob/master/changelog.md"
homepage = "https://github.com/lherron/my_awesome_package"


[project.scripts]
my_awesome_package = "my_awesome_package.cli:app"


# Mypy
# ----

[tool.mypy]
files = "."
python_version = "3.12"


strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

