[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.0.0",
    "anthropic",
    "python-dotenv>=1.0.0",
    "httpx",
    "rich",
    "prefect>=2.14.0",
    "mcp[cli]",
    "jmapc",
    "tenacity",
    "requests>=2.31.0",
    "markdown>=3.5.0",
]


[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "coverage",
    "ruff",
    "mypy"
]

[project.urls]

bugs = "https://github.com/{{cookiecutter.__gh_slug}}/issues"
changelog = "https://github.com/{{cookiecutter.__gh_slug}}/blob/master/changelog.md"
homepage = "https://github.com/{{cookiecutter.__gh_slug}}"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.cli.cli:app"


# Mypy
# ----

[tool.mypy]
files = "."
python_version = "3.12"


strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

