[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.0.0",
    "anthropic",
    "python-dotenv>=1.0.0",
    "httpx",
    "rich",
    "prefect>=2.14.0",
    "mcp[cli]",
    "jmapc",
    "tenacity",
    "requests>=2.31.0",
    "markdown>=3.5.0",
    "evaitools",
]


[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "coverage",
    "ruff",
    "mypy"
]

[project.urls]

bugs = "https://github.com/{{cookiecutter.__gh_slug}}/issues"
changelog = "https://github.com/{{cookiecutter.__gh_slug}}/blob/master/changelog.md"
homepage = "https://github.com/{{cookiecutter.__gh_slug}}"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.cli.cli:app"



[tool.ruff]
line-length = 180

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]
ignore = [
    "E203",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.uv.sources]
evaitools = { path = "../../evaitools", editable = true }
